--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ accelerate==0.21.0
 aiohttp==3.8.5
 aiosignal==1.3.1
 annotated-types==0.6.0
+asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.1.0
 bitsandbytes==0.40.2
@@ -9,12 +10,17 @@ blessed==1.20.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
 cmake==3.27.2
+comm==0.2.2
 contourpy==1.1.1
 cycler==0.12.1
 datasets==2.13.0
+debugpy==1.8.5
+decorator==5.1.1
 deepspeed==0.13.1
 dill==0.3.6
 docstring-parser==0.15
+exceptiongroup==1.2.2
+executing==2.1.0
 filelock==3.12.3
 fire==0.5.0
 fonttools==4.43.1
@@ -24,38 +30,51 @@ gpustat==1.1.1
 hjson==3.1.0
 huggingface-hub==0.16.4
 idna==3.4
-install==1.3.5
+ipykernel==6.29.5
+ipython==8.27.0
+jedi==0.19.1
 Jinja2==3.1.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 lit==16.0.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.4
 multiprocess==0.70.14
+nest-asyncio==1.6.0
 networkx==3.1
 ninja==1.11.1.1
 numpy==1.25.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-ml-py==12.535.108
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-ml-py==12.560.30
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.6.68
+nvidia-nvtx-cu12==12.1.105
 openai==0.28.0
-packaging==23.1
+packaging==24.1
 pandas==2.1.0
+parso==0.8.4
 peft==0.4.0
+pexpect==4.9.0
 Pillow==10.1.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
 psutil==5.9.5
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-cpuinfo==9.0.0
 pyarrow==13.0.0
 pydantic==2.5.3
@@ -66,6 +85,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0.1
+pyzmq==26.2.0
 regex==2023.8.8
 requests==2.31.0
 rich==13.6.0
@@ -74,14 +94,17 @@ scipy==1.11.2
 sentencepiece==0.1.99
 shtab==1.6.4
 six==1.16.0
+stack-data==0.6.3
 sympy==1.12
 tenacity==8.2.3
 termcolor==2.3.0
 tokenizers==0.13.3
-torch==2.0.1
+torch==2.1.0
+tornado==6.4.1
 tqdm==4.66.1
+traitlets==5.14.3
 transformers==4.31.0
-triton==2.0.0
+triton==2.1.0
 trl==0.7.2
 typing_extensions==4.7.1
 tyro==0.5.10
