--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.1.0
 accelerate==0.21.0
 aiohttp==3.8.5
 aiosignal==1.3.1
@@ -9,6 +10,7 @@ bitsandbytes==0.40.2
 blessed==1.20.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
+click==8.1.7
 cmake==3.27.2
 comm==0.2.2
 contourpy==1.1.1
@@ -19,6 +21,7 @@ decorator==5.1.1
 deepspeed==0.13.1
 dill==0.3.6
 docstring-parser==0.15
+evaluate==0.4.2
 exceptiongroup==1.2.2
 executing==2.1.0
 filelock==3.12.3
@@ -34,6 +37,7 @@ ipykernel==6.29.5
 ipython==8.27.0
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 kiwisolver==1.4.5
@@ -49,6 +53,7 @@ multiprocess==0.70.14
 nest-asyncio==1.6.0
 networkx==3.1
 ninja==1.11.1.1
+nltk==3.9.1
 numpy==1.25.2
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -89,6 +94,7 @@ pyzmq==26.2.0
 regex==2023.8.8
 requests==2.31.0
 rich==13.6.0
+rouge-score==0.1.2
 safetensors==0.3.3
 scipy==1.11.2
 seaborn==0.13.2
