--- a/requirements.txt
+++ b/requirements.txt
@@ -1,122 +1,124 @@
 absl-py==2.1.0
-accelerate==0.21.0
-aiohttp==3.8.5
-aiosignal==1.3.1
-annotated-types==0.6.0
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.1.0
-bitsandbytes==0.40.2
-blessed==1.20.0
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
+accelerate==1.4.0
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiosignal==1.3.2
+asttokens==3.0.0
+async-timeout==5.0.1
+attrs==25.1.0
+bitsandbytes==0.45.3
+Brotli==1.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
 cmake==3.27.2
 comm==0.2.2
-contourpy==1.1.1
+contourpy==1.3.1
 cycler==0.12.1
-datasets==2.13.0
-debugpy==1.8.5
-decorator==5.1.1
-deepspeed==0.13.1
-dill==0.3.6
-docstring-parser==0.15
-evaluate==0.4.2
+datasets==3.3.2
+debugpy==1.8.13
+decorator==5.2.1
+dill==0.3.8
+evaluate==0.4.3
 exceptiongroup==1.2.2
-executing==2.1.0
-filelock==3.12.3
-fire==0.5.0
-fonttools==4.43.1
-frozenlist==1.4.0
-fsspec==2023.6.0
-gpustat==1.1.1
+executing==2.2.0
+filelock==3.17.0
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2024.12.0
 hjson==3.1.0
-huggingface-hub==0.16.4
-idna==3.4
+huggingface-hub==0.29.2
+idna==3.10
+inflate64==1.0.1
 ipykernel==6.29.5
-ipython==8.27.0
-jedi==0.19.1
-Jinja2==3.1.2
+ipython==8.34.0
+jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.4.2
-jupyter_client==8.6.2
+jupyter_client==8.6.3
 jupyter_core==5.7.2
-kiwisolver==1.4.5
+kiwisolver==1.4.8
 lit==16.0.6
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
-multidict==6.0.4
-multiprocess==0.70.14
+multidict==6.1.0
+multiprocess==0.70.16
+multivolumefile==0.2.3
 nest-asyncio==1.6.0
-networkx==3.1
+networkx==3.4.2
 ninja==1.11.1.1
 nltk==3.9.1
-numpy==1.25.2
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
+numpy==2.2.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
 nvidia-ml-py==12.560.30
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.6.68
-nvidia-nvtx-cu12==12.1.105
-openai==0.28.0
-packaging==24.1
-pandas==2.1.0
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
+pandas==2.2.3
 parso==0.8.4
-peft==0.4.0
+peft==0.14.0
 pexpect==4.9.0
-Pillow==10.1.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-psutil==5.9.5
+pillow==11.1.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+propcache==0.3.0
+psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py-cpuinfo==9.0.0
-pyarrow==13.0.0
-pydantic==2.5.3
-pydantic_core==2.14.6
-Pygments==2.16.1
-pynvml==11.5.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
+py7zr==0.22.0
+pyarrow==19.0.1
+pybcj==1.0.3
+pycryptodomex==3.21.0
+Pygments==2.19.1
+pyparsing==3.2.1
+pyppmd==1.1.1
+python-dateutil==2.9.0.post0
 pytz==2023.3
-PyYAML==6.0.1
-pyzmq==26.2.0
-regex==2023.8.8
-requests==2.31.0
-rich==13.6.0
+PyYAML==6.0.2
+pyzmq==26.2.1
+pyzstd==0.16.2
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
 rouge-score==0.1.2
-safetensors==0.3.3
-scipy==1.11.2
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
 seaborn==0.13.2
 sentencepiece==0.1.99
-shtab==1.6.4
-six==1.16.0
+six==1.17.0
 stack-data==0.6.3
-sympy==1.12
-tenacity==8.2.3
-termcolor==2.3.0
-tokenizers==0.13.3
-torch==2.1.0
+style==1.1.0
+sympy==1.13.1
+texttable==1.7.0
+threadpoolctl==3.6.0
+tokenizers==0.21.0
+torch==2.6.0
 tornado==6.4.1
-tqdm==4.66.1
+tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.31.0
-triton==2.1.0
-trl==0.7.2
-typing_extensions==4.7.1
-tyro==0.5.10
+transformers==4.49.0
+triton==3.2.0
+trl==0.15.2
+typing_extensions==4.12.2
 tzdata==2023.3
+update==0.0.1
 urllib3==2.0.4
 wcwidth==0.2.6
 xxhash==3.3.0
-yarl==1.9.2
+yarl==1.18.3
